Remove all remnants of BrainDumpItem
